; ModuleID = '/home/carl/AnghaBench/git/extr_sequencer.c_get_todo_path.c'
source_filename = "/home/carl/AnghaBench/git/extr_sequencer.c_get_todo_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.replay_opts = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.replay_opts*)* @get_todo_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_todo_path(%struct.replay_opts* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.replay_opts*, align 8
  store %struct.replay_opts* %0, %struct.replay_opts** %3, align 8
  %4 = load %struct.replay_opts*, %struct.replay_opts** %3, align 8
  %5 = call i64 @is_rebase_i(%struct.replay_opts* %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = call i8* (...) @rebase_path_todo()
  store i8* %8, i8** %2, align 8
  br label %11

9:                                                ; preds = %1
  %10 = call i8* (...) @git_path_todo_file()
  store i8* %10, i8** %2, align 8
  br label %11

11:                                               ; preds = %9, %7
  %12 = load i8*, i8** %2, align 8
  ret i8* %12
}

declare dso_local i64 @is_rebase_i(%struct.replay_opts*) #1

declare dso_local i8* @rebase_path_todo(...) #1

declare dso_local i8* @git_path_todo_file(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
